--- a/BenefitsCenter/Views/Home/Index.cshtml
+++ b/BenefitsCenter/Views/Home/Index.cshtml
@@ -8,40 +8,11 @@
 </div>
 
 <div class="row">
-  <div class="col-md-12" id="stepOne">
-   <h3>Step 1: Enter your information</h3>
-    <p>
-      <label>First Name</label>
-      <input id="FirstName" type="text" value="" />
-    </p> 
-    <p>
-      <label>Last Name</label>
-      <input id="LastName" type="text" value="" />
-    </p> 
-  </div>
-
-
-  <div class="col-md-12" id="stepTwo" style="display:none;">
-   <h3>Step 2: Enter your dependent information</h3>
-    <p>
-      <label>Dependent First Name</label>
-      <input id="DependentFirstName" type="text" value="" />
-    </p> 
-    <p>
-      <label>Dependent Last Name</label>
-      <input id="DependentLastName" type="text" value="" />
-    </p> 
-  </div>
-
-  <div class="col-md-12" id="stepThree" style="display:none;">
-   <h3>Step 3: Select a package</h3>
-    <p>
-      <label>Blahblah</label>
-      <input id="DependentFirstName" type="text" value="" />
-    </p> 
-    <p>
-      <label>Dependent Last Name</label>
-      <input id="DependentLastName" type="text" value="" />
-    </p> 
-  </div>
+  <h3>Right now this is just a placeholder. With this solution you can try the following:</h3>
+  <ul>
+    <li>Run unit tests via Chutzpah (or ReSharper)</li>
+    <li>Get integrated linting via WebEssentials and JSHint</li>
+    <li>Run gulp tasks through Task Runner Explorer</li>
+    <li>Utilize qunit tests and eslint linting through gulp</li>
+  </ul>
 </div>
